src/components/HomePage/HomePage.scss
@import '../../common/partials/text';
@import '../../common/partials/colors';
@import "../../common/partials/variables";

.homepage {

  .header-area {
    height: 80vh;
    display: flex;
    justify-content: space-between;
    margin-bottom: 55px;

    .left {
      border-left: 2px solid $gray;
      max-height: 595px;
      margin-left: 138px;

      .lines {
        display: flex;
        max-width: 500%;

        .long-line {
          height: 396px;
          width: 0;
          border: 1px solid $gray;
          margin-left: 120px;
        }
      }

      .text {
        display: flex;
        flex-direction: column;
        max-width: 600px;
        padding-left: 51px;
        padding-top: 50px;
        color: $gray;

        .header-title {
          font-size: $font-size-title;
          text-transform: uppercase;
          margin-bottom: 20px;
        }

        .header-about {
          font-size: $font-size-medium;
          line-height: 38px;
        }
      }

      .arrow {
        border: solid $gray;
        border-width: 0 3px 3px 0;
        display: inline-block;
        padding: 10px;
        transform: rotate(45deg);
        -webkit-transform: rotate(45deg);
      }
    }

    .right {
      .header-img {
        position: relative;
        top: 0;
        right: 0;
        z-index: 5;
      }

      .box {
        max-width: 776px;
        max-height: 312px;
        width: 100%;
        height: 100%;
        background-color: $yellow;
        position: absolute;
        top: 420px;
        right: 0;
        z-index: 0;
      }
    }
  }

  .about-us {

    .about-us-flex {
      display: flex;
      justify-content: space-between;

      .text {
        max-width: 270px;
        line-height: 150%;
        font-size: $font-size-small-regular;

        &:first-child {
          max-width: 260px;
        }
      }

      .line-text {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        width: 50%;

        .hor-line {
          max-width: 610px;
          height: 0;
          border: 1px solid $gray;
          width: 100%;

          &:not(:last-child) {

          }
        }

        .med-hor-line {
          max-width: 295px;
          width: 100%;
          height: 0;
          border: 1px solid $gray;
        }

        .mid {
          display: flex;
          justify-content: space-between;

          .text {
            max-width: 261px;
            line-height: 150%;
          }

          .mid-right {
            display: flex;
            flex-direction: column;
            justify-content: space-between;
            max-width: 294px;
            width: 100%;

            .button-wrapper {
              display: flex;
              justify-content: space-between;

              .about-us-button {
                background-color: $dark-gray;
                padding: 15px 25px;
                margin: 82px 93px;
                color: $white;
                font-size: $font-size-small-regular;

                @include hover-transition;

                &:hover {
                  color: $dark-gray-hover;
                }
              }

              .small-hor-line {
                width: 65px;
                border: 1px solid $gray;
                height: 0;
                align-self: center;
              }
            }
          }
        }
      }
    }
  }

  .our-team {
    margin-top: 100px;
    position: relative;
    z-index: 5;

    .width-container {
      .content-wrapper {
        display: flex;
        border-left: 2px solid $gray;
        border-right: 2px solid $gray;
        padding: 0 63px;
        font-size: $font-size-small-regular;

        .top {
          display: flex;
          justify-content: space-around;

          .ver-line {
            height: 120px;
            width: 0;
            border: 1px solid $gray;
            margin-left: -40px;
          }
        }

        .mid {
          margin-bottom: 25px;

          .title {
            font-size: $font-size-small-regular;
            margin-bottom: 15px;
          }

          .area {
            max-width: 149px;
            word-break: break-all;
          }
        }

        .single-lawyer {
          display: flex;
          justify-content: space-between;
          flex-direction: column;
          border-right: 2px solid $gray;
          padding-right: 43px;
          margin-right: 50px;
        }

        .single-lawyer-reverse {
          display: flex;
          justify-content: space-between;
          flex-direction: column-reverse;
          border-right: 2px solid $gray;
          padding-right: 43px;
          margin-right: 50px;

          img {
            margin-bottom: 25px;
          }
        }

      }
    }

    .yellow-box {
      position: absolute;
      z-index: 1;
      height: 398px;
      width: 100%;
      background-color: $yellow;
      margin-bottom: -290px;
    }
  }

  .areas {
    margin-top: 140px;

    .width-container {
      .content-wrapper {
        border-top: 2px solid $gray;
        border-bottom: 2px solid $gray;

        .top {
          display: flex;

          .left {
            display: flex;

            .lines {
              display: flex;
              flex-direction: column;

              .short-hor-line {
                width: 190px;
                height: 0;
                border: 1px solid $gray;
                margin-bottom: 112px;

                &:first-child {
                  margin-top: 95px;
                }
              }
            }

            .tabs {
              display: flex;
              flex-direction: column;
              margin: 93px 80px 93px 20px;


                .tab {
                  font-size: $font-size-small-regular;
                  font-weight: bold;
                  width: 130px;

                  &:not(:last-child) {
                    margin-bottom: 30px;
                  }

                  &.active {
                    font-size: $font-size-regular;
                    font-weight: normal;
                    width: 145px;
                  }
                }

                .arrow {
                  margin-left: 10px;
                }
            }
          }

          .right {
            display: flex;
            margin-top: 33px;

            .text {
              max-width: 383px;
              font-size: $font-size-small-regular;
              line-height: 150%;
              margin-bottom: 35px;
            }

            .right-button {
              margin-left: 30px;

              .text2 {
                max-width: 400px;
                font-size: $font-size-small-regular;
                line-height: 150%;
                margin-bottom: 105px;
              }

              .lines {
                margin-bottom: 95px;
              }

              .button-wrapper {
                max-width: 400px;
                display: flex;
                align-items: center;
                justify-content: space-between;
                width: 365px;

                .button {
                  background-color: $dark-gray;
                  padding: 15px 25px;
                  color: $white;
                  font-size: $font-size-small-regular;

                  @include hover-transition;

                  &:hover {
                    color: $dark-gray-hover;
                  }
                }

                .line {
                  max-width: 190px;
                  width: 100%;
                  height: 0px;
                  border: 1px solid $gray;
                }
              }

              .medium-hor-line {
                max-width: 398px;
                width: 100%;
                height: 0px;
                border: 1px solid $gray;
                margin-top: 87px;
              }
            }
          }
        }

        .bottom {

          .long-line {
            height: 0px;
            border: 1px solid $gray;
            width: 100%;
            margin-bottom: 95px;
          }
        }
      }
    }
  }
}

